--- a/.gitignore
+++ b/.gitignore
@@ -54,7 +54,7 @@ Thumbs.db
 #  Mobile Project                       #
 # ===================================== #
 
-/ProjectSettings/*.*
+#/ProjectSettings/*.*
 
 
 # ===================================== #
