--- a/.gitignore
+++ b/.gitignore
@@ -55,6 +55,7 @@ Thumbs.db
 # ===================================== #
 
 #/ProjectSettings/*.*
+/apk/*.*
 
 
 # ===================================== #
